--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,53 @@
-absl-py==2.1.0
-astunparse==1.6.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
-flatbuffers==24.3.25
+contourpy==1.2.1
+cycler==0.12.1
+filelock==3.15.4
+fonttools==4.53.0
+fsspec==2024.6.1
 future==1.0.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.64.1
-h5py==3.11.0
 idna==3.7
-keras==3.4.1
-libclang==18.1.1
+Jinja2==3.1.4
+kiwisolver==1.4.5
 lxml==5.2.2
-Markdown==3.6
-markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-mdurl==0.1.2
-ml-dtypes==0.3.2
-namex==0.0.8
+matplotlib==3.9.0
+mpmath==1.3.0
+networkx==3.3
 numpy==1.26.4
-opt-einsum==3.3.0
-optree==0.11.0
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
+opencv-python==4.10.0.84
 packaging==24.1
-protobuf==4.25.3
-Pygments==2.18.0
+pandas==2.2.2
+pillow==10.3.0
+psutil==6.0.0
+py-cpuinfo==9.0.0
 pymavlink==2.4.41
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
 requests==2.32.3
-rich==13.7.1
-setuptools==70.1.1
+scipy==1.14.0
+seaborn==0.13.2
 six==1.16.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-termcolor==2.4.0
+sympy==1.12.1
+torch==2.3.1
+torchvision==0.18.1
+tqdm==4.66.4
 typing_extensions==4.12.2
+tzdata==2024.1
+ultralytics==8.2.46
+ultralytics-thop==2.0.0
 urllib3==2.2.2
-Werkzeug==3.0.3
-wheel==0.43.0
-wrapt==1.16.0
