--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiogrpc==1.8
 certifi==2024.6.2
 charset-normalizer==3.3.2
 contourpy==1.2.1
@@ -6,12 +7,14 @@ filelock==3.15.4
 fonttools==4.53.0
 fsspec==2024.6.1
 future==1.0.0
+grpcio==1.64.1
 idna==3.7
 Jinja2==3.1.4
 kiwisolver==1.4.5
 lxml==5.2.2
 MarkupSafe==2.1.5
 matplotlib==3.9.0
+mavsdk==2.8.0
 mpmath==1.3.0
 networkx==3.3
 numpy==1.26.4
@@ -31,9 +34,9 @@ opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
+protobuf==3.20.1
 psutil==6.0.0
 py-cpuinfo==9.0.0
-pymavlink==2.4.41
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
